--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,7 +43,7 @@
     <parent>
         <groupId>org.owasp.encoder</groupId>
         <artifactId>encoder-parent</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2</version>
     </parent>
 
     <artifactId>encoder</artifactId>
