--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
     <groupId>org.owasp.encoder</groupId>
     <artifactId>encoder-parent</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>pom</packaging>
 
     <name>OWASP Encoders Parent</name>
