--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,7 @@
                     <excludes>
                         <exclude>org/owasp/encoder/BenchmarkTest.java</exclude>
                     </excludes>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
