--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <version>1.2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>OWASP Encoders Parent</name>
+    <name>OWASP Java Encoder Project</name>
     <description>
         The OWASP Encoders package is a collection of high-performance low-overhead
         contextual encoders, that when utilized correctly, is an effective tool in
@@ -183,7 +183,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>2.6</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -208,7 +208,26 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <!-- upgrading beyond 3.4 may break the reflow skin -->
+                    <version>3.4</version>
+					<dependencies>
+						<dependency>
+						  <groupId>lt.velykis.maven.skins</groupId>
+						  <artifactId>reflow-velocity-tools</artifactId>
+						  <version>1.1.1</version>
+						</dependency>
+						<!-- Reflow skin requires Velocity >= 1.7  -->
+						<dependency>
+						  <groupId>org.apache.velocity</groupId>
+						  <artifactId>velocity</artifactId>
+						  <version>1.7</version>
+						</dependency>
+						<dependency>
+							<groupId>org.apache.maven.doxia</groupId>
+							<artifactId>doxia-module-markdown</artifactId>
+							<version>1.6</version>
+						</dependency>
+					</dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -308,21 +327,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.doxia</groupId>
-                        <artifactId>doxia-core</artifactId>
-                        <version>1.7</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.maven.doxia</groupId>
-                        <artifactId>doxia-module-markdown</artifactId>
-                        <version>1.7</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <skipDeploy>true</skipDeploy>
-                </configuration>
             </plugin>
         </plugins>
     </build>
