--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
 language: java
 
-addons:
-  apt:
-    packages:
-      - openjdk-6-jdk
-
 jdk:
-  - openjdk6
   - openjdk7
   - openjdk8
-  - openjdk9
-  - openjdk10
-  - openjdk11
   - oraclejdk8
-  - oraclejdk9
-  - oraclejdk10
+# to compile using JDK 9+ we must move from source and target 1.5 to 1.6 
+#  - openjdk9
+#  - openjdk10
+#  - openjdk11
+#  - oraclejdk9
+#  - oraclejdk10
 
 script: mvn test -B -X
