Add Automatic-Modulue-Name via apache felix bundle plugin for each module.

--- a/esapi/pom.xml
+++ b/esapi/pom.xml
@@ -54,6 +54,10 @@
         Projects API into an implementation of ESAPI.
     </description>
 
+    <properties>
+        <jigsaw.module.name>org.owasp.encoder.esapi</jigsaw.module.name>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.owasp.encoder</groupId>
