--- a/core/pom.xml
+++ b/core/pom.xml
@@ -56,6 +56,10 @@
         Scripting.
     </description>
 
+    <properties>
+        <jigsaw.module.name>org.owasp.encoder</jigsaw.module.name>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
