--- a/jakarta/pom.xml
+++ b/jakarta/pom.xml
@@ -45,17 +45,18 @@
         <version>1.3.0</version>
     </parent>
 
-    <artifactId>encoder-esapi</artifactId>
+    <artifactId>encoder-jakarta-jsp</artifactId>
     <packaging>jar</packaging>
 
-    <name>ESAPI Thunk</name>
+    <name>Jakarta JSP Encoder</name>
     <description>
-        The OWASP Encoders ESAPI Thunk provides an easy way to plugin the Encoder
-        Projects API into an implementation of ESAPI.
+        The OWASP Encoder Jakarta JSP package contains JSP tag definitions and TLDs to allow
+        easy use of the OWASP Encoder Project's core API. The TLDs contain both tag
+        definitions and JSP EL functions.
     </description>
 
     <properties>
-        <jigsaw.module.name>org.owasp.encoder.esapi</jigsaw.module.name>
+        <jigsaw.module.name>org.owasp.encoder.jakarta</jigsaw.module.name>
     </properties>
 
     <dependencies>
@@ -65,9 +66,40 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.owasp.esapi</groupId>
-            <artifactId>esapi</artifactId>
-            <version>[2.5.1.0,3)</version>
+            <groupId>jakarta.servlet.jsp</groupId>
+            <artifactId>jakarta.servlet.jsp-api</artifactId>
+            <version>3.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.0.22</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.19</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
