--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     <modules>
         <module>core</module>
         <module>jsp</module>
+        <module>jakarta</module>
         <module>esapi</module>
     </modules>
 
@@ -266,8 +267,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -445,7 +446,7 @@
                             <report>javadoc</report>
                         </reports>
                         <configuration>
-                            <source>1.6</source>
+                            <source>1.8</source>
                             <failOnError>false</failOnError>
                         </configuration>
                     </reportSet>
