--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: java
 dist: trusty
 
 jdk:
-  - openjdk8
-  - oraclejdk8
+  - openjdk17
+#  the jakarta jsp encoder module requires Java 17.
+#  - openjdk8
+#  - oraclejdk8
 # to compile using JDK 9+ we must move from source and target 1.5 to 1.6 
 #  - openjdk9
 #  - openjdk10
