fix: compile to Java 8

--- a/jakarta/pom.xml
+++ b/jakarta/pom.xml
@@ -90,7 +90,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -101,5 +101,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 </project>
