--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,6 +21,6 @@ jobs:
         distribution: 'temurin'
     - name: Run build
       run: |
-        mvn install
+        mvn install -PtestJakarta
 
 
